<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_debug_dashboard</name>
  <version>0.1.0</version>
  <description>A Python-based ROS2 debugging dashboard to monitor topics, services, and logs.</description>
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>Apache License 2.0</license> <!-- Or your chosen license -->

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend> <!-- For example publishers/subscribers and RViz data -->
  <depend>rcl_interfaces</depend> <!-- For /rosout Log messages -->
  <depend>ros2launch</depend> <!-- For launch file examples -->
  <depend>rviz2</depend> <!-- For RViz integration concepts -->
  <!-- Add other specific message/service packages if your monitors target them by default -->
  <!-- <depend>example_interfaces</depend> -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
